fixed overflowing bug

--- a/src/App.css
+++ b/src/App.css
@@ -268,11 +268,11 @@ nav {
   width: 100%;
   height: calc(100vh - 94px);
   /* Subtract the header height */
-  min-height: 600px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   position: relative;
+  overflow-y: hidden;
 }
 
 /* Fridge list/items */
@@ -339,7 +339,6 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
-    /* background-color: #ceafab; */
   position: absolute;
   bottom: 0;
 }
